converted into static

--- a/carrers.html
+++ b/carrers.html
@@ -226,192 +226,22 @@
 
     </div>
 
+   
     <section class="section section-default border-0 m-0">
         <div class="container py-4">
 
             <div class="row pb-4">
-                <div class="col-md-8">
+                <div class="col-md-12">
                     <div class="appear-animation" data-appear-animation="fadeIn" data-appear-animation-delay="200">
                         <h4 class="mt-2 mb-2">Current <strong class="text-color-thick">Openings</strong></h4>
+                        <p class="appear-animation text-4 pt-2" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1400"  style="text-align: justify;" >Regrettably, there are no available vacancies to offer you at the moment. We appreciate
+                            your interest and encourage you to stay connected for future opportunities and updates!</p>
 
-                        <div class="accordion accordion-modern accordion-modern-grey-scale-1 without-bg mt-4" id="accordion11">
-                            <div class="card card-default mb-2">
-                                <div class="card-header">
-                                    <h4 class="card-title m-0">
-                                        <a class="accordion-toggle text-3" data-bs-toggle="collapse" data-bs-parent="#accordion11" href="#collapse11One">
-                                            Senior Software Developer - Web Development
-                                        </a>
-                                    </h4>
-                                </div>
-                                <div id="collapse11One" class="collapse show">
-                                    <div class="card-body mt-3">
-                                        <p>Suspendisse potenti. Curabitur euismod facilisis neque, eu malesuada diam finibus non. Nullam nec vehicula leo. Morbi porta ante eu feugiat mollis ellus blandit massa enim. Nullam id varius nunc ellus blandit massa enim. Nullam id varius nunc.</p>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus blandit massa enim. Nullam id varius nunc. Vivamus bibendum magna ex, et faucibus lacus venenatis eget.</p>
-
-                                        <ul class="list list-inline mt-4 mb-3 text-2">
-                                            <li class="list-inline-item">
-                                                <strong>LOCATION:</strong>
-                                                NEW YORK
-                                            </li>
-                                            <li class="list-inline-item ms-md-3">
-                                                <strong>QUALIFICATION:</strong>
-                                                3+ YEARS EXPERIENCE, GRADUATION
-                                            </li>
-                                        </ul>
-
-                                        <a href="#" class="btn btn-modern btn-dark">Apply</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="card card-default mb-2">
-                                <div class="card-header">
-                                    <h4 class="card-title m-0">
-                                        <a class="accordion-toggle text-3" data-bs-toggle="collapse" data-bs-parent="#accordion11" href="#collapse11Two">
-                                            Infrastructure Monitoring - Software Developer
-                                        </a>
-                                    </h4>
-                                </div>
-                                <div id="collapse11Two" class="collapse">
-                                    <div class="card-body mt-3">
-                                        <p>Suspendisse potenti. Curabitur euismod facilisis neque, eu malesuada diam finibus non. Nullam nec vehicula leo. Morbi porta ante eu feugiat mollis ellus blandit massa enim. Nullam id varius nunc ellus blandit massa enim. Nullam id varius nunc.</p>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus blandit massa enim. Nullam id varius nunc. Vivamus bibendum magna ex, et faucibus lacus venenatis eget.</p>
-
-                                        <ul class="list list-inline mt-4 mb-3 text-2">
-                                            <li class="list-inline-item">
-                                                <strong>LOCATION:</strong>
-                                                NEW YORK
-                                            </li>
-                                            <li class="list-inline-item ms-md-3">
-                                                <strong>QUALIFICATION:</strong>
-                                                3+ YEARS EXPERIENCE, GRADUATION
-                                            </li>
-                                        </ul>
-
-                                        <a href="#" class="btn btn-modern btn-dark">Apply</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="card card-default mb-2">
-                                <div class="card-header">
-                                    <h4 class="card-title m-0">
-                                        <a class="accordion-toggle text-3" data-bs-toggle="collapse" data-bs-parent="#accordion11" href="#collapse11Three">
-                                            Main Developer - Software Developer
-                                        </a>
-                                    </h4>
-                                </div>
-                                <div id="collapse11Three" class="collapse">
-                                    <div class="card-body mt-3">
-                                        <p>Suspendisse potenti. Curabitur euismod facilisis neque, eu malesuada diam finibus non. Nullam nec vehicula leo. Morbi porta ante eu feugiat mollis ellus blandit massa enim. Nullam id varius nunc ellus blandit massa enim. Nullam id varius nunc.</p>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus blandit massa enim. Nullam id varius nunc. Vivamus bibendum magna ex, et faucibus lacus venenatis eget.</p>
-
-                                        <ul class="list list-inline mt-4 mb-3 text-2">
-                                            <li class="list-inline-item">
-                                                <strong>LOCATION:</strong>
-                                                NEW YORK
-                                            </li>
-                                            <li class="list-inline-item ms-md-3">
-                                                <strong>QUALIFICATION:</strong>
-                                                3+ YEARS EXPERIENCE, GRADUATION
-                                            </li>
-                                        </ul>
-
-                                        <a href="#" class="btn btn-modern btn-dark">Apply</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="card card-default mb-2">
-                                <div class="card-header">
-                                    <h4 class="card-title m-0">
-                                        <a class="accordion-toggle text-3" data-bs-toggle="collapse" data-bs-parent="#accordion11" href="#collapse11Four">
-                                            Front-End Developer - Software Developer
-                                        </a>
-                                    </h4>
-                                </div>
-                                <div id="collapse11Four" class="collapse">
-                                    <div class="card-body mt-3">
-                                        <p>Suspendisse potenti. Curabitur euismod facilisis neque, eu malesuada diam finibus non. Nullam nec vehicula leo. Morbi porta ante eu feugiat mollis ellus blandit massa enim. Nullam id varius nunc ellus blandit massa enim. Nullam id varius nunc.</p>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus blandit massa enim. Nullam id varius nunc. Vivamus bibendum magna ex, et faucibus lacus venenatis eget.</p>
-
-                                        <ul class="list list-inline mt-4 mb-3 text-2">
-                                            <li class="list-inline-item">
-                                                <strong>LOCATION:</strong>
-                                                NEW YORK
-                                            </li>
-                                            <li class="list-inline-item ms-md-3">
-                                                <strong>QUALIFICATION:</strong>
-                                                3+ YEARS EXPERIENCE, GRADUATION
-                                            </li>
-                                        </ul>
-
-                                        <a href="#" class="btn btn-modern btn-dark">Apply</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="card card-default mb-2">
-                                <div class="card-header">
-                                    <h4 class="card-title m-0">
-                                        <a class="accordion-toggle text-3" data-bs-toggle="collapse" data-bs-parent="#accordion11" href="#collapse11Five">
-                                            Lead Designer - Design
-                                        </a>
-                                    </h4>
-                                </div>
-                                <div id="collapse11Five" class="collapse">
-                                    <div class="card-body mt-3">
-                                        <p>Suspendisse potenti. Curabitur euismod facilisis neque, eu malesuada diam finibus non. Nullam nec vehicula leo. Morbi porta ante eu feugiat mollis ellus blandit massa enim. Nullam id varius nunc ellus blandit massa enim. Nullam id varius nunc.</p>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus blandit massa enim. Nullam id varius nunc. Vivamus bibendum magna ex, et faucibus lacus venenatis eget.</p>
-
-                                        <ul class="list list-inline mt-4 mb-3 text-2">
-                                            <li class="list-inline-item">
-                                                <strong>LOCATION:</strong>
-                                                NEW YORK
-                                            </li>
-                                            <li class="list-inline-item ms-md-3">
-                                                <strong>QUALIFICATION:</strong>
-                                                3+ YEARS EXPERIENCE, GRADUATION
-                                            </li>
-                                        </ul>
-
-                                        <a href="#" class="btn btn-modern btn-dark">Apply</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                      
                     </div>
 
                 </div>
-                <div class="col-md-4">
-                    <div class="appear-animation" data-appear-animation="fadeIn" data-appear-animation-delay="400">
-                        <div class="owl-carousel owl-theme dots-inside mb-0 pb-0" data-plugin-options="{'items': 1, 'autoplay': true, 'autoplayTimeout': 4000, 'margin': 10, 'animateOut': 'fadeOut', 'dots': false}">
-                            <div class="pb-5">
-                                <img alt="" class="img-fluid rounded" src="carrerpage/img/subhujotechnologies-carrerspage-openings-1170x780.png">
-                            </div>
-                            <div class="pb-5">
-                                <img alt="" class="img-fluid rounded" src="carrerpage/img/subhujotechnologies-carrerspage-jobopenings-hiringimage-1170x780.jpg">
-                            </div>
-                        </div>
-
-                        <div class="toggle toggle-primary toggle-simple" data-plugin-toggle>
-                            <section class="toggle active">
-                                <a class="toggle-title">Our Benefits</a>
-                                <div class="toggle-content">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc <a href="#">vehicula</a> lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet.</p>
-                                </div>
-                            </section>
-                            <section class="toggle">
-                                <a class="toggle-title">Our Culture</a>
-                                <div class="toggle-content">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eget leo at velit imperdiet varius. In eu ipsum vitae velit congue iaculis vitae at risus. Nullam tortor nunc, bibendum vitae semper a, volutpat eget massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer fringilla, orci sit amet posuere auctor.</p>
-                                </div>
-                            </section>
-                            <section class="toggle">
-                                <a class="toggle-title">Join Our Team</a>
-                                <div class="toggle-content">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eget leo at velit imperdiet varius. In eu ipsum vitae velit congue iaculis vitae at risus. Nullam tortor nunc, bibendum vitae semper a, volutpat eget massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer fringilla, orci sit amet posuere auctor, orci eros pellentesque odio, nec pellentesque erat ligula nec massa. Aenean consequat lorem ut felis ullamcorper posuere gravida tellus faucibus. Maecenas dolor elit, pulvinar eu vehicula eu, consequat et lacus. Duis et purus ipsum. In auctor mattis ipsum id molestie. Donec risus nulla, fringilla a rhoncus vitae, semper a massa. Vivamus ullamcorper, enim sit amet consequat laoreet, tortor tortor dictum urna, ut egestas urna ipsum nec libero. Nulla justo leo, molestie vel tempor nec, egestas at massa. Aenean pulvinar, felis porttitor iaculis pulvinar, odio orci sodales odio, ac pulvinar felis quam sit.</p>
-                                </div>
-                            </section>
-                        </div>
-                    </div>
-                </div>
+              
             </div>
 
         </div>
