all changes done

--- a/carrers.html
+++ b/carrers.html
@@ -97,43 +97,67 @@
 														</a>
 														<ul class="dropdown-menu">
 															<li >
-																<a class="dropdown-item" href="./Application-development">Application
-																	Development</a>
+																<a class="dropdown-item  active " href="./application_development">Application Development</a>
 	
 															</li>
 															<li >
-																<a class="dropdown-item" href="./Offshore-development">Offshore Development</a>
+																<a class="dropdown-item " href="./offshore_development">Offshore Development</a>
 	
 															</li>
 															<li >
-																<a class="dropdown-item" href="./Corporate-training">Corporate Training</a>
+																<a class="dropdown-item " href="./corporate_training">Corporate Training</a>
 	
 															</li>
 															<li >
-																<a class="dropdown-item" href="./Sap">SAP</a>
+																<a class="dropdown-item " href="./sap">SAP</a>
 	
 															</li>
 															<li >
-																<a class="dropdown-item" href="./Testing">Testing</a>
+																<a class="dropdown-item  " href="./testing">Testing</a>
+	
+															</li>
+															<li >
+																<a class="dropdown-item " href="./it_ites_staffing">IT / ITES Staffing</a>
+	
+															</li>
+															<li >
+																<a class="dropdown-item " href="./dataware_housing">Dataware Housing</a>
 	
 															</li>
 															<li>
-																<a class="dropdown-item" href="./IT&ITES">IT /ITES Staffing</a>
+																<a class="dropdown-item " href="./oracle">Oracle</a>
 	
 															</li>
 															<li >
-																<a class="dropdown-item" href="./Datawarehousing">Datawarehousing</a>
-	
-															</li>
-															<li >
-																<a class="dropdown-item" href="./Oracle">Oracle</a>
-	
-															</li>
-															<li >
-																<a class="dropdown-item" href="./MicrosoftImplementation">Microsoft Implementation &
+																<a class="dropdown-item " href="./microsoft_implementation">Microsoft Implementation &
 																	Support</a>
 	
 															</li>
+															<li >
+																<a class="dropdown-item " href="./vmware_tanzu">VMWare Tanzu</a>
+	
+															</li>
+															<li >
+																<a class="dropdown-item " href="./apigee">APIGEE</a>
+	
+															</li>
+															<li>
+																<a class="dropdown-item " href="./openshift">
+																	Openshift
+																</a>
+															</li>
+															<li>
+																<a class="dropdown-item " href="./apigee_consulting">
+																	APIGEE Consulting
+																</a>
+															</li>
+
+															<li>
+																<a class="dropdown-item " href="./temenos_consulting">
+																	Temenos Consulting
+																</a>
+															</li>
+
 	
 														</ul>
 													</li>
