--- a/index.html
+++ b/index.html
@@ -97,42 +97,67 @@
 														</a>
 														<ul class="dropdown-menu">
 															<li >
-																<a class="dropdown-item" href="./Application-development">Application Development</a>
+																<a class="dropdown-item  active " href="./application_development">Application Development</a>
 	
 															</li>
 															<li >
-																<a class="dropdown-item" href="./Offshore-development">Offshore Development</a>
+																<a class="dropdown-item " href="./offshore_development">Offshore Development</a>
 	
 															</li>
 															<li >
-																<a class="dropdown-item" href="./Corporate-training">Corporate Training</a>
+																<a class="dropdown-item " href="./corporate_training">Corporate Training</a>
 	
 															</li>
 															<li >
-																<a class="dropdown-item" href="./Sap">SAP</a>
+																<a class="dropdown-item " href="./sap">SAP</a>
 	
 															</li>
 															<li >
-																<a class="dropdown-item" href="./Testing">Testing</a>
+																<a class="dropdown-item  " href="./testing">Testing</a>
 	
 															</li>
 															<li >
-																<a class="dropdown-item" href="./IT&ITES">IT /ITES Staffing</a>
+																<a class="dropdown-item " href="./it_ites_staffing">IT / ITES Staffing</a>
 	
 															</li>
 															<li >
-																<a class="dropdown-item" href="./Datawarehousing">Datawarehousing</a>
+																<a class="dropdown-item " href="./dataware_housing">Dataware Housing</a>
 	
 															</li>
 															<li>
-																<a class="dropdown-item" href="./Oracle">Oracle</a>
+																<a class="dropdown-item " href="./oracle">Oracle</a>
 	
 															</li>
 															<li >
-																<a class="dropdown-item" href="./MicrosoftImplementation">Microsoft Implementation &
+																<a class="dropdown-item " href="./microsoft_implementation">Microsoft Implementation &
 																	Support</a>
 	
 															</li>
+															<li >
+																<a class="dropdown-item " href="./vmware_tanzu">VMWare Tanzu</a>
+	
+															</li>
+															<li >
+																<a class="dropdown-item " href="./apigee">APIGEE</a>
+	
+															</li>
+															<li>
+																<a class="dropdown-item " href="./openshift">
+																	Openshift
+																</a>
+															</li>
+															<li>
+																<a class="dropdown-item " href="./apigee_consulting">
+																	APIGEE Consulting
+																</a>
+															</li>
+
+															<li>
+																<a class="dropdown-item " href="./temenos_consulting">
+																	Temenos Consulting
+																</a>
+															</li>
+
 	
 														</ul>
 													</li>
@@ -494,7 +519,7 @@
 										<h4 class="font-weight-bold text-color-light"></h4>
 										<p class="font-weight-light text-color-light text-4 ">can create tailor-made applications that will help you. meet
 											your unique needs and goals</p>
-										<a href="/application_development/"
+										<a href="./application_development"
 											class="btn btn-primary btn-modern  font-weight-bold">READ MORE</a>
 									</div>
 								</div>
@@ -522,7 +547,7 @@
 										<p class="font-weight-light text-color-light text-4"> Our experienced team is
 											able to create a dedicated group of skilled developers
 											that are carefully chosen to accommodate your company's culture.</p>
-										<a href="/offshore_development/"
+										<a href="./offshore_development"
 											class="btn btn-primary btn-modern text-color-light font-weight-bold">READ MORE</a>
 									</div>
 								</div>
@@ -551,7 +576,7 @@
 										<p class="font-weight-light text-color-light text-4">services are sure to increase your
 											employee's focus, energy and vision and enhance their effectiveness both personally and
 											professionally.</p>
-										<a href="/corporate_training/"
+										<a href="./corporate_training"
 											class="btn btn-primary btn-modern text-color-light font-weight-bold">READ MORE</a>
 									</div>
 								</div>
@@ -608,7 +633,7 @@
 										<p class="font-weight-light text-color-light text-4"> product's success upon release; and
 											our team Maginified the expertise needed to fulfill all your software testing
 											requirements!.</p>
-										<a href="/testing/"
+										<a href="./testing"
 											class="btn btn-primary btn-modern text-color-white font-weight-bold">READ MORE</a>
 									</div>
 								</div>
@@ -636,7 +661,7 @@
 										<h4 class="font-weight-bold text-color-light"></h4>
 										<p class="font-weight-light text-color-light text-4 ">identifying an ideal candidate that
 											will not only meet expectations but also thrive within your organization.</p>
-										<a href="/it_ites_staffing/"
+										<a href="./it_ites_staffing"
 											class="btn btn-primary btn-modern text-color-light font-weight-bold">LEARN MORE</a>
 									</div>
 								</div>
@@ -666,7 +691,7 @@
 										<p class="font-weight-light text-color-light text-4">essential information and perfect
 											solution to keeping your company's data organized and accessible- a single, unified
 											platform that can be searched with ease</p>
-										<a href="/dataware_housing/"
+										<a href="./dataware_housing"
 											class="btn btn-primary btn-modern text-color-light font-weight-bold">READ MORE</a>
 									</div>
 								</div>
@@ -695,7 +720,7 @@
 											solutions for their entire enterprise - from accounting and human resources to
 											marketing/procurement, project management.
 										</p>
-										<a href="/oracle/" class="btn btn-primary btn-modern text-color-light font-weight-bold">READ
+										<a href="./oracle" class="btn btn-primary btn-modern text-color-light font-weight-bold">READ
 											MORE</a>
 									</div>
 								</div>
@@ -724,7 +749,7 @@
 										<p class="font-weight-light text-color-light text-4 "> business applications, platforms,
 											services and performance. With our expert knowledge of Microsoft enterprise products to
 											guide us, we ensure businesses can stay up-to date.</p>
-										<a href="/microsoft_implementation/"
+										<a href="./microsoft_implementation"
 											class="btn btn-primary btn-modern text-color-light font-weight-bold">LEARN MORE</a>
 									</div>
 								</div>
@@ -755,7 +780,7 @@
 											features, we ensure that you unlock the full potential of your applications, staying
 											ahead in today's competitive market.
 										</p>
-										<a href="/vmware_tanzu/"
+										<a href="./vmware_tanzu"
 											class="btn btn-primary btn-modern text-color-light font-weight-bold">LEARN MORE</a>
 									</div>
 								</div>
@@ -789,7 +814,7 @@
 											experts, empowering your APIs for unparalleled performance and growth. Let your APIs
 											soar to new heights with our expertise by your side.
 										</p>
-										<a href="/apigee/"
+										<a href="./apigee"
 											class="btn btn-primary btn-modern text-color-light font-weight-bold">LEARN MORE</a>
 									</div>
 								</div>
@@ -823,7 +848,7 @@
 											orchestration technologies ensure a seamless journey. Let our expert team assist you in
 											planning your migration or green-field development with confidence, propelling your
 											enterprise into the future of cloud-native innovation.</p>
-										<a href="/openshift/"
+										<a href="./openshift"
 											class="btn btn-primary btn-modern text-color-light font-weight-bold">LEARN MORE</a>
 									</div>
 								</div>
@@ -856,7 +881,7 @@
 										<p class="font-weight-light text-color-light text-4 ">We offer strategic consulting and
 											staffing solutions for APIGEE with resources designed to provide businesses with the
 											flexibility and customization to meet your requirements.</p>
-										<a href="/apigee_consulting/"
+										<a href="./apigee_consulting"
 											class="btn btn-primary btn-modern text-color-light font-weight-bold">LEARN MORE</a>
 									</div>
 								</div>
@@ -890,7 +915,7 @@
 											precisely, minimizing disruption and maximizing productivity. Our resources resolve
 											queries promptly and ensure uninterrupted banking operations. We provide comprehensive
 											coverage with skilled resources for diverse banking requirements.</p>
-										<a href="/temenos_consulting/"
+										<a href="./temenos_consulting"
 											class="btn btn-primary btn-modern text-color-light font-weight-bold">LEARN MORE</a>
 									</div>
 								</div>
